account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: hm716/account
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085

---
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  type: NodePort
  selector:
    app: account
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
      nodePort: 30105
