credit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-deployment
  labels:
    app: credit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: credit
  template:
    metadata:
      labels:
        app: credit
    spec:
      containers:
        - name: credit
          image: hm716/credit
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: credit-service
spec:
  type: LoadBalancer
  selector:
    app: credit
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
      nodePort: 30110
