customer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: hm716/customer
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: NodePort
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
